_includes/manuals/1.11/4.3.5_smartproxy_dns.md

Activate the DNS management module within the Smart Proxy instance.  This is used to update and remove DNS records from existing DNS zones.

The DNS module can manipulate any DNS server that complies with the ISC Dynamic DNS Update standard and can therefore be used to manage both Microsoft Active Directory and BIND servers.  Updates can also be made using GSS-TSIG, see the second section below.  Additional providers are available for managing libvirt's embedded DNS server (dnsmasq) and Microsoft Active Directory using dnscmd, for static DNS records, avoiding scavenging.

Builtin providers are:

* `dns_nsupdate` - dynamic DNS update using nsupdate
* `dns_nsupdate_gss` - dynamic DNS update with GSS-TSIG
* `dns_libvirt` - dnsmasq DNS via libvirt API
* `dns_dnscmd` - static DNS records in Microsoft Active Directory

Extra providers are available as plugins and can be installed through packages.  See the following pages for more information:

* [List of smart proxy plugins](http://projects.theforeman.org/projects/foreman/wiki/List_of_Smart-Proxy_Plugins)
* [Plugin installation documentation]({{ site.baseurl }}plugins/)

To enable the DNS module and enable a provider, `dns.yml` must contain:

    :enabled: https
    :use_provider: dns_nsupdate

For providers from plugins, check the plugin documentation to determine the exact provider name.

The default TTL of DNS records added by the Smart Proxy is 86400 seconds (one day).  This can be changed with the dns_ttl setting:

    :dns_ttl: 86400

Each provider has its own configuration file in the same directory with its own settings, e.g. `dns_nsupdate.yml`.  This usually needs additional configuration after changing the `use_provider` setting.

#### dns_nsupdate

The dns_nsupdate provider uses the `nsupdate` command to make dynamic updates to the DNS server records. This works on a wide variety of RFC2136-compliant servers.

DNS servers that support Kerberos authentication, e.g. FreeIPA or Microsoft Active Directory, should use the dns_nsupdate_gss provider instead.

This provider has the following settings in the `dns_nsupdate.yml` configuration file:

    #:dns_key: /etc/rndc.key
    :dns_server: localhost

The **dns_key** specifies a file containing a shared secret used to generate a signature for the update request (TSIG record), thus authenticating the smart proxy to the DNS server.

<div class="alert alert-info">If you use a key file or keytab, make sure that only the foreman-proxy account can read that file.</div>

If neither the **dns_key** or GSS-TSIG is used then the update request is sent without any signature. Unsigned update requests are considered insecure. Some DNS servers can be configured to accept only signed signatures.

The **dns_server** option is used if the Smart Proxy is not located on the same physical host as the DNS server. If it is not specified then localhost is presumed.

    :dns_key: /etc/foreman-proxy/Kapi.+157+47848.private
    :dns_server: dnsserver.site.example.com

#### dns_nsupdate_gss

For servers that support Kerberos/GSS-TSIG to authenticate DNS updates, the dns_nsupdate_gss provider should be used. This typically applies to FreeIPA and Microsoft Active Directory servers. This is equivalent to the `nsupdate -g` command.

This provider has the following settings in the `dns_nsupdate_gss.yml` configuration file:

    :dns_tsig_keytab: /usr/share/foreman-proxy/dns.keytab
    :dns_tsig_principal: DNS/host.example.com@EXAMPLE.COM

See the section on GSS-TSIG DNS below for steps on setting up the requisite accounts and keytabs with both AD and FreeIPA.

The **dns_server** option is used if the Smart Proxy is not located on the same physical host as the DNS server. If it is not specified then localhost is presumed.

    :dns_server: dnsserver.site.example.com

#### dns_dnscmd

While the `dns_nsupdate` provider creates dynamic records in Active Directory, the `dns_dnscmd` provider uses the `dnscmd` tool to create static DNS records in AD, which are not affected by scavenging. This requires that the Smart Proxy is installed on a Windows server with `dnscmd` available.

The **dns_server** option is used if the Smart Proxy is not located on the same physical host as the DNS server. If it is not specified then localhost is presumed.

    :dns_server: dnsserver.site.example.com

#### dns_libvirt

Provider that manages reservations and leases via dnsmasq through libvirt API.
It uses ruby-libvirt gem to connect to the local or remote instance of libvirt
daemon.

Possible configuration options in `dns_virsh.yml` are:

    # Libvirt network. Only one network is supported.
    :network: default

    # Libvirt connection. Make sure proxy effective user have permission to connect.
    :url: qemu:///system

When configuring local or remote connections, make sure the `foreman-proxy`
effective user have UNIX permissions to libvirt socket or ssh keys are
deployed when using remote connection.

More information about using this provider is in the [Libvirt section]({{ site.baseurl }}manuals/{{ page.version }}/index.html#4.3.11Libvirt).
